--- a/index.html
+++ b/index.html
@@ -10,54 +10,53 @@
   <link href="fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body id="home">
- <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item page-scroll">
+          <a class="nav-link" href="#home">Home</a>
+        </li>
+        <li class="nav-item page-scroll">
+          <a class="nav-link" href="#profile">Profile</a>
+        </li>
+        <li class="nav-item page-scroll">
+          <a class="nav-link" href="#works">Works</a>
+        </li>
+        <li class="nav-item page-scroll">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item page-scroll">
-        <a class="nav-link" href="#home">Home</a>
-      </li>
-      <li class="nav-item page-scroll">
-        <a class="nav-link" href="#profile">Profile</a>
-      </li>
-      <li class="nav-item page-scroll">
-        <a class="nav-link" href="#works">Works</a>
-      </li>
-      <li class="nav-item page-scroll">
-        <a class="nav-link" href="#contact">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <section class="container content-section">
+    <div class="intro-body">
+      <h1>Hiroki's Portfolio</h1>
+      <h2>Full stack web developer</h2>
+      <div class="profile-description"></div>
+    </div>
+  </section>
 
-<section class="container content-section">
-  <div class="intro-body">
-    <h1>Hiroki's Portfolio</h1>
-    <h2>Full stack web developer</h2>
-    <div class="profile-description"></div>
-  </div>
-</section>
-
-<section id="profile" class="container content-section">
-  <h1 class="text-center"><i class="fas fa-user-circle"></i> Profile</h1>
-  <div class="profile-body">
-    <div class="container">
-      <div class="row">
-        <div class="profile-img">
-          <img src="img/prof.png">
+  <section id="profile" class="container content-section">
+    <h1 class="text-center"><i class="fas fa-user-circle"></i> Profile</h1>
+    <div class="profile-body">
+      <div class="container">
+        <div class="row">
+          <div class="profile-img">
+            <img src="img/prof.png">
+          </div>
+          <div class="profile-description"></div>
         </div>
-        <div class="profile-description"></div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="works" class="content-section">
-  <h1 class="text-center"><i class="fas fa-code"></i> Works</h1>
-  <div class="works-section">
+  <section id="works" class="content-section">
+    <h1 class="text-center"><i class="fas fa-code"></i> Works</h1>
+    <div class="works-section">
       <!-- In order to show this image accrosss the screen,
       class="container" must be within this div-->
       <div class="container">
@@ -81,29 +80,20 @@
 
   <section id="contact" class="content-section text-center">
     <h1 class="text-center"><i class="fas fa-envelope-square"></i> Contact</h1>
+    <p>Feel free to shoot me an email for any web development work.</p>
+    <p>takahashi@au-shushoku.rocks</p>
     <div class="container">
-      <div class="">
-        <p>Feel free to shoot me an email for any web development work.</p>
-        <p>blah@example.com</p>
-        <ul class="list-inline banner-social-buttons">
-          <li>
-            <a href="https://www.linkedin.com/in/hiroki-takahashi-198986b1/" target="_blank"></a>
-          </li>
-          <li>
-            <a href="https://github.com/Hiroki111/" target="_blank"></a>
-          </li>
-
-
-        </ul>
+      <div class="row">
+        <div class="col-md-12">
+          <a href="https://www.linkedin.com/in/hiroki-takahashi-198986b1/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
+          <a href="https://github.com/Hiroki111/" target="_blank"><i class="fab fa-github-square fa-5x"></i></a>
+        </div>
       </div>
     </div>
   </section>
-
   <footer>
     <p>Hiroki's Portfolio &copy; 2018, All Rights Reserved</p>
   </footer>
-
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
