Updated the intro section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body id="home">
   <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <a class="navbar-brand em-text" href="#">Hiroki's Portfolio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,11 +33,13 @@
     </div>
   </nav>
 
-  <section class="container content-section">
-    <div class="intro-body">
-      <h1>Hiroki's Portfolio</h1>
-      <h2>Full stack web developer</h2>
-      <div class="profile-description"></div>
+  <section class="content-section" style="padding-top: 0;">
+    <div class="hero">
+      <div class="container">
+        <h1 class="text-center align-middle">Hiroki's Portfolio</h1>
+        <h2 class="text-center">Full stack web developer</h2>
+        <div class="profile-description"></div>
+      </div>
     </div>
   </section>
 
