--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <link href="fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body id="home">
-  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-    <a class="navbar-brand em-text" href="#">Hiroki's Portfolio</a>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <div class="page-scroll">
+      <a class="navbar-brand em-text" style="color: rgba(109, 255, 126, 0.45);" href="#home">Hiroki's Portfolio</a>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,12 +35,16 @@
     </div>
   </nav>
 
-  <section class="content-section" style="padding-top: 0;">
-    <div class="hero">
-      <div class="container">
-        <h1 class="text-center align-middle">Hiroki's Portfolio</h1>
-        <h2 class="text-center">Full stack web developer</h2>
-        <div class="profile-description"></div>
+  <section class="content-section" style="padding-top: 55px;">
+    <div class="hero jumbotron" style="position: relative; top: 50%;">
+      <div style="padding-top: 100px;">
+        <h1 class="text-center" style="color: #fff; font-size: 100px;">Hiroki's Portfolio</h1>
+        <h2 class="text-center" style="color: #fff; font-size: 50px;">Full stack web developer</h2>
+        <div class="page-scroll" style="position: absolute; bottom: 20px; left: 47.5%; width: 60px;">
+          <a class="nav-link" href="#profile" style="padding: 0">
+            <i id="intro-arrow" class="far fa-arrow-alt-circle-down fa-3x" style="color: white;"></i>
+          </a>
+        </div>
       </div>
     </div>
   </section>
