Updated the profile page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   </nav>
 
   <section class="content-section" style="padding-top: 55px;">
-    <div class="hero jumbotron" style="position: relative; top: 50%;">
+    <div class="hero jumbotron">
       <div style="padding-top: 100px;">
-        <h1 class="text-center" style="color: #fff; font-size: 100px;">Hiroki's Portfolio</h1>
+        <h1 class="text-center" style="color: #fff; font-size: 100px;">Hiroki Takahashi</h1>
         <h2 class="text-center" style="color: #fff; font-size: 50px;">Full stack web developer</h2>
         <div class="page-scroll" style="position: absolute; bottom: 20px; left: 47.5%; width: 60px;">
           <a class="nav-link" href="#profile" style="padding: 0">
@@ -53,11 +53,43 @@
     <h1 class="text-center"><i class="fas fa-user-circle"></i> Profile</h1>
     <div class="profile-body">
       <div class="container">
-        <div class="row">
-          <div class="profile-img">
-            <img src="img/prof.png">
+        <div class="row" style="padding-top: 40px;">
+          <div class="col-md-4">
+            <div class="profile-img">
+            <img class="rounded mx-auto d-block" src="img/prof.png">
+            </div>  
           </div>
-          <div class="profile-description"></div>
+          <div class="col-8">
+            <div class="profile-description">
+            <h2>Hello, I'm Hiroki.</h2>
+            <p>I've been working as a web developer since January 2016.</p>
+            <p>I've been mainly working for back-end developement, and my strongest skill is back-end development with <strong>Laravel 5.</strong></p>
+            <p>For front-end development, I usually use <strong>React.js</strong> (for big and/or interactive apps) or <strong>jQuery</strong> (for relatively small sites, such as this portfolio).</p>
+            <p>Here is a list of languages / technologies I often use.</p>
+            <table class="tech-list">
+              <tr>
+                <td>Back-end:</td>
+                <td><img src="img/laravel.png"><img src="img/nodejs.png"></td>
+              </tr>
+              <tr>
+                <td>Front-end:</td>
+                <td><img src="img/react.png"><img src="img/jquery.png"><img src="img/angularjs.png"></td>
+              </tr>
+              <tr>
+                <td>Database:</td>
+                <td><img src="img/mysql.png"></td>
+              </tr>
+              <tr>
+                <td>Web server:</td>
+                <td><img src="img/nginx.png"></td>
+              </tr>
+              <tr>
+                <td>OS:</td>
+                <td><img src="img/linux.jpg"></td>
+              </tr>
+            </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
