--- a/index.html
+++ b/index.html
@@ -35,18 +35,16 @@
     </div>
   </nav>
 
-  
-
   <section class="content-section" style="padding-top: 55px;">
     <div class="hero jumbotron">
-      <div style="padding-top: 100px;">
+      <div id="title-holder">
         <h1 class="text-center" style="color: #fff; font-size: 100px;">Hiroki Takahashi</h1>
         <h2 class="text-center" style="color: #fff; font-size: 50px;">Full stack web developer</h2>
-        <div class="page-scroll" style="position: absolute; bottom: 20px; left: 47.5%; width: 60px;">
-          <a class="nav-link" href="#profile" style="padding: 0">
-            <i id="intro-arrow" class="far fa-arrow-alt-circle-down fa-3x" style="color: white;"></i>
-          </a>
-        </div>
+      </div>
+      <div class="page-scroll" style="position: absolute; bottom: 20px; left: 47.5%; width: 60px;">
+        <a class="nav-link" href="#profile" style="padding: 0">
+          <i id="intro-arrow" class="far fa-arrow-alt-circle-down fa-3x" style="color: white;"></i>
+        </a>
       </div>
     </div>
   </section>
@@ -64,33 +62,45 @@
           <div class="col-8">
             <div class="profile-description">
               <h2>Hello, I'm Hiroki.</h2>
-              <p>I've been working as a web developer since January 2016.</p>
-              <p>I've been mainly working for back-end developement, and my strongest skill is back-end development with <strong>Laravel 5.</strong></p>
-              <p>For front-end development, I usually use <strong>React.js</strong> (for big and/or interactive apps) or <strong>jQuery</strong> (for relatively small sites, such as this portfolio).</p>
-              <p>Here is a list of languages / technologies I often use.</p>
-              <table class="tech-list">
-                <tr>
-                  <td>Back-end:</td>
-                  <td><img src="img/laravel.png"><img src="img/nodejs.png"></td>
-                </tr>
-                <tr>
-                  <td>Front-end:</td>
-                  <td><img src="img/react.png"><img src="img/jquery.png"><img src="img/angularjs.png"></td>
-                </tr>
-                <tr>
-                  <td>Database:</td>
-                  <td><img src="img/mysql.png"></td>
-                </tr>
-                <tr>
-                  <td>Web server:</td>
-                  <td><img src="img/nginx.png"></td>
-                </tr>
-                <tr>
-                  <td>OS:</td>
-                  <td><img src="img/linux.jpg"></td>
-                </tr>
-              </table>
+              <p>I'm a Japanese web develoer, currently residing in Australia.</p>
+              <p>I started my career as a web developer in January 2016. Since then, I've been mainly working for back-end developement.</p>
+              <p>My strongest skill is back-end development with <strong>Laravel 5</strong>. For front-end development, I usually use <strong>React.js</strong> (for big and/or interactive apps) or <strong>jQuery</strong> (for relatively small sites, such as this portfolio).</p>
             </div>
+          </div>
+        </div>
+        <div id="tech-list">
+          <p class="text-center">Here is a list of languages / technologies I use.</p>
+          <div class="row">
+            <div class="col-md-12">
+              <h4><strong>Back-End Development</strong></h4>
+            </div>
+            <div class="col-md-4"><img src="img/laravel.png"></div>
+            <div class="col-md-4"><img src="img/nodejs.png"></div>
+            <div class="col-md-4"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <h4><strong>Front-End Development</strong></h4>
+            </div>
+            <div class="col-md-4"><img src="img/react.png"></div>
+            <div class="col-md-4"><img src="img/jquery.png"></div>
+            <div class="col-md-4"><img src="img/angularjs.png"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <h4><strong>OS</strong></h4>
+            </div>
+            <div class="col-md-4"><img src="img/linux.jpg"></div>
+            <div class="col-md-4"><img src="img/max.png"></div>
+            <div class="col-md-4"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <h4><strong>Others</strong></h4>
+            </div>
+            <div class="col-md-4"><img src="img/mysql.png"></div>
+            <div class="col-md-4"><img src="img/nginx.png"></div>
+            <div class="col-md-4"><img src="img/git.png"></div>
           </div>
         </div>
       </div>
@@ -100,57 +110,68 @@
   <section id="works" class="content-section">
     <h1 class="text-center"><i class="fas fa-code"></i> Works</h1>
     <div class="works-section">
-      <!-- In order to show this image accrosss the screen,
-      class="container" must be within this div-->
       <div class="container">
         <div class="row">
+          <div class="col-md-4 work-container">
+            <img class="work-img" src="img/works/portfolio.png">
+            <div class="work-hover-div">
+              <button type="button" class="learn-more-btn" data-toggle="modal" data-target="#work-modal">
+                Learn More
+              </button>
+              <div class="work-description">
+                <h5 class="text-center"><strong>Hiroki's Portfolio</strong></h5>
+                <p>This web site. It's built with basic HTML, CSS, jQuery and Bootstrap 4.</p>
+              </div>
+              <div class="site-url" data-url="/"></div>
+            </div>
+          </div>
           <div class="col-md-4 work-container">
             <img class="work-img" src="img/works/blog-jp.png">
             <div class="work-hover-div">
               <button type="button" class="learn-more-btn" data-toggle="modal" data-target="#work-modal">
                 Learn More
               </button>
+              <div class="work-description">
+                <h5 class="text-center"><strong>ゼロから始めるオーストラリア就職</strong></h5>
+                <p>My Japanese blog built with WordPress. I usually write about how to prepare for studying abroad, how to get a work visa and how to find a job opportinity in Australia. The title loosely translates as "Finding a job in Australia from scratch".</p>
+              </div>
+              <div class="site-url" data-url="https://www.hiroki-t.com/"></div>
             </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dum</p>
           </div>
           <div class="col-md-4 work-container">
-            <img class="work-img" src="img/works/blog-jp.png">
+            <img class="work-img" src="img/works/blog-en.png">
             <div class="work-hover-div">
-              <a href="https://www.hiroki-t.com/" target="_blank">
-                <div class="learn-more-btn">Learn More</div>
-              </a>
+              <button type="button" class="learn-more-btn" data-toggle="modal" data-target="#work-modal">
+                Learn More
+              </button>
+              <div class="work-description">
+                <h5 class="text-center"><strong>Hiroki Takahashi</strong></h5>
+                <p>My English blog built with WordPress. The objective for this blog is to record my learnig experience (although I don't update this blog these days).</p>
+              </div>
+              <div class="site-url" data-url="https://www.hiroki-t.me/"></div>
             </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dum</p>
-          </div>
-          <div class="col-md-4 work-container">
-            <img class="work-img" src="img/works/blog-jp.png">
-            <div class="work-hover-div">
-              <a href="https://www.hiroki-t.com/" target="_blank">
-                <div class="learn-more-btn">Learn More</div>
-              </a>
-            </div>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dum</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <div class="modal fade" id="work-modal" tabindex="-1" role="dialog" aria-labelledby="work-modalTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal fade bd-example-modal-lg" id="work-modal" tabindex="-1" role="dialog" aria-labelledby="work-modalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
         <div class="modal-body">
-          ...
+          <img id="modal-img" class="work-img" src="">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <div class="container">
+            <div id="modal-work-description" class="row"></div>
+            <div class="row">
+              <div class="col-md-4 offset-md-8">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a id="modal-site-url" href="" target="_blank" class="btn btn-primary">View This Site</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -158,8 +179,11 @@
 
   <section id="contact" class="content-section text-center">
     <h1 class="text-center"><i class="fas fa-envelope-square"></i> Contact</h1>
-    <p>Feel free to shoot me an email for any web development work.</p>
-    <p>takahashi@au-shushoku.rocks</p>
+    <div style="padding-top: 80px;">
+      <p>Feel free to shoot me an email for any web development work!</p>
+      <p><strong>takahashi@au-shushoku.rocks</strong></p>
+      <p>Or, you can find me on...</p>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -173,6 +197,7 @@
     <p>Hiroki's Portfolio &copy; 2018, All Rights Reserved</p>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="js/bootstrap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
