Fixed the profile

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-8 profile-description">
             <div>
-              <h2>Hello, I'm Hiroki.</h2>
+              <h2>Hello, I'm Hiroki Takahashi.</h2>
               <p>I'm a Japanese web develoer, currently residing in Australia.</p>
               <p>I started my career as a web developer in January 2016. Since then, I've been mainly working for back-end developement.</p>
               <p>My strongest skill is back-end development with <strong>Laravel 5</strong>. For front-end development, I usually use <strong>React.js</strong> (for big and/or interactive apps) or <strong>jQuery</strong> (for relatively small sites, such as this portfolio).</p>
