Added meta contents

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="fontawesome/css/all.css" rel="stylesheet">
+
+  <meta property="og:description" content="Full stack web developer, Hiroki Takahashi's portfolio.">
+  <meta property="og:title" content="Hiroki's Portfolio">
+  <meta property="og:url" content="https://hiroki111.github.io/portfolio/">
+  <meta property="og:image" content="https://hiroki111.github.io/portfolio/img/works/portfolio.png">
+  <meta property="og:site_name" content="Hiroki's Portfolio">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@takahas779">
+  <meta name="description" itemprop="description" content="Full stack web developer, Hiroki Takahashi's portfolio.">
 </head>
 <body id="home">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
