--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
           <div class="col-8 profile-description">
             <div>
               <h2>Hello, I'm Hiroki Takahashi.</h2>
-              <p>I'm a Japanese web develoer, currently residing in Australia.</p>
-              <p>I started my career as a web developer in January 2016. Since then, I've been mainly working for back-end developement.</p>
-              <p>My strongest skill is back-end development with <strong>Laravel 5</strong>. For front-end development, I usually use <strong>React.js</strong> (for big and/or interactive apps) or <strong>jQuery</strong> (for relatively small sites, such as this portfolio).</p>
+              <p>I'm a Japanese web develoer, currently residing in Poland.</p>
+              <p>I started my career as a web developer in January 2016. Since then, I've been working for both front-end and back-end developement.</p>
+              <p>My strongest skill is back-end development with <strong>Laravel 5</strong>. For front-end development, I usually use <strong>React.js</strong> or <strong>jQuery</strong>.</p>
             </div>
           </div>
         </div>
         <div id="tech-list">
-          <p class="text-center">Here is a list of languages / technologies I use.</p>
+          <p class="text-center">Here is a list of languages / technologies I'm familiar with.</p>
           <div class="row">
             <div class="col-md-12">
               <h4><strong>Back-End Development</strong></h4>
@@ -92,8 +92,8 @@
               <h4><strong>Front-End Development</strong></h4>
             </div>
             <div class="col-md-4"><img src="img/react.png"></div>
+            <div class="col-md-4"><img src="img/typescript.png"></div>
             <div class="col-md-4"><img src="img/jquery.png"></div>
-            <div class="col-md-4"><img src="img/angularjs.png"></div>
           </div>
           <div class="row">
             <div class="col-md-12">
@@ -107,7 +107,7 @@
             <div class="col-md-12">
               <h4><strong>Others</strong></h4>
             </div>
-            <div class="col-md-4"><img src="img/mysql.png"></div>
+            <div class="col-md-4"><img src="img/aws.png"></div>
             <div class="col-md-4"><img src="img/nginx.png"></div>
             <div class="col-md-4"><img src="img/git.png"></div>
           </div>
@@ -122,6 +122,19 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 work-container">
+            <img class="work-img" src="https://store.hiroki-t.com/images/slides/1.jpeg">
+            <div class="work-hover-div">
+              <button type="button" class="learn-more-btn" data-toggle="modal" data-target="#work-modal">
+                Learn More
+              </button>
+              <div class="work-description">
+                <h5 class="text-center"><strong>Hiroki's Liquor</strong></h5>
+                <p>An imaginary shopping website which was developed for a training purpose. Any order that is made on this website won't be actually delivered. This site was developed with Laravel, jQuery and AWS(S3). </p>
+              </div>
+              <div class="site-url" data-url="http://store.hiroki-t.com/"></div>
+            </div>
+          </div>
+          <div class="col-md-4 work-container">
             <img class="work-img" src="img/works/portfolio.png">
             <div class="work-hover-div">
               <button type="button" class="learn-more-btn" data-toggle="modal" data-target="#work-modal">
@@ -131,20 +144,7 @@
                 <h5 class="text-center"><strong>Hiroki's Portfolio</strong></h5>
                 <p>This web site. It's built with basic HTML, CSS, jQuery and Bootstrap 4.</p>
               </div>
-              <div class="site-url" data-url="https://hiroki111.github.io/portfolio/"></div>
-            </div>
-          </div>
-          <div class="col-md-4 work-container">
-            <img class="work-img" src="img/works/blog-jp.png">
-            <div class="work-hover-div">
-              <button type="button" class="learn-more-btn" data-toggle="modal" data-target="#work-modal">
-                Learn More
-              </button>
-              <div class="work-description">
-                <h5 class="text-center"><strong>ゼロから始めるオーストラリア就職</strong></h5>
-                <p>My Japanese blog built with WordPress. I usually write about how to prepare for studying abroad, how to get a work visa and how to find a job opportinity in Australia. The title loosely translates as "Finding a job in Australia from scratch".</p>
-              </div>
-              <div class="site-url" data-url="https://www.hiroki-t.com/"></div>
+              <div class="site-url" data-url="http://portfolio.hiroki-t.me/"></div>
             </div>
           </div>
           <div class="col-md-4 work-container">
@@ -155,7 +155,7 @@
               </button>
               <div class="work-description">
                 <h5 class="text-center"><strong>Hiroki Takahashi</strong></h5>
-                <p>My English blog built with WordPress. The objective for this blog is to record my learnig experience (although I don't update this blog these days).</p>
+                <p>My personal blog built with WordPress. The objective for this blog is to record my learnig experience (although I don't update this blog these days).</p>
               </div>
               <div class="site-url" data-url="https://www.hiroki-t.me/"></div>
             </div>
@@ -190,7 +190,7 @@
     <h1 class="text-center"><i class="fas fa-envelope-square"></i> Contact</h1>
     <div style="padding-top: 60px;">
       <p>Feel free to shoot me an email for any web development work!</p>
-      <p><strong>takahashi@au-shushoku.rocks</strong></p>
+      <p><strong>hiroki@hiroki-t.com</strong></p>
       <p>Or, you can find me on...</p>
     </div>
     <div class="container">
