Updated the skill icons

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             <div class="col-md-12">
               <h4><strong>Others</strong></h4>
             </div>
+            <div class="col-md-4"><img src="img/mysql.png"></div>
             <div class="col-md-4"><img src="img/aws.png"></div>
             <div class="col-md-4"><img src="img/nginx.png"></div>
-            <div class="col-md-4"><img src="img/git.png"></div>
           </div>
         </div>
       </div>
