--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@takahas779">
   <meta name="description" itemprop="description" content="Full stack web developer, Hiroki Takahashi's portfolio.">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124623332-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-124623332-3');
+  </script>
 </head>
 <body id="home">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
